<resources>
    <string name="app_name">Highroad codesample</string>
<!--    auth-->
    <string name="secret_key_name">biometric_highroad_encryption_key</string>
    <string name="prompt_info_title">Highroad App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Highroad App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>

    <string name="hello_entrance_fragment">Hello entrance fragment</string>
    <string name="hello_motion_fragment">Hello motion fragment</string>
    <string name="entrance_todo_case_title">To-Do list case</string>
    <string name="entrance_title_case_motion">Motion case</string>
    <string name="entrance_title_case_flight_search">Flight Search case</string>
    <string name="entrance_title_case_tictactoe">TicTacToe case</string>
    <string name="entrance_title_case_compose">Compose case</string>
    <string name="entrance_title_case_article">Articles case</string>
    <string name="entrance_bluetooth">Bluetooth case</string>
    <string name="entrance_camerax">CameraX case</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_refresh">Refresh</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="basiclayout_favorite_collections">Favorite Collections</string>
    <string name="basiclayout_align_your_body">Align your body</string>
    <string name="basiclayout_ab1_inversions">Inversions</string>
    <string name="basiclayout_ab2_quick_yoga">Quick yoga</string>
    <string name="basiclayout_ab3_stretching">Stretching</string>
    <string name="basiclayout_ab4_tabata">Tabata</string>
    <string name="basiclayout_ab5_hiit">HIIT</string>
    <string name="basiclayout_ab6_pre_natal_yoga">Pre-natal yoga</string>
    <string name="basiclayout_fc1_short_mantras">Short mantras</string>
    <string name="basiclayout_fc2_nature_meditations">Nature meditations</string>
    <string name="basiclayout_fc3_stress_and_anxiety">Stress and anxiety</string>
    <string name="basiclayout_fc4_self_massage">Self massage</string>
    <string name="basiclayout_fc5_overwhelmed">Overwhelmed</string>
    <string name="basiclayout_fc6_nightly_wind_down">Nightly wind down</string>
    <string name="basiclayout_cd_fab_start">start</string>
    <string name="basiclayout_bottom_navigation_home">HOME</string>
    <string name="basiclayout_bottom_navigation_profile">PROFILE</string>
    <string name="basiclayout_placeholder_search">Search</string>

    <string name="theming_navigation_drawer">Navigation Drawer</string>
    <string name="theming_tab_inbox">Inbox</string>
    <string name="theming_tab_article">Articles</string>
    <string name="theming_tab_dm">Direct Messages</string>
    <string name="theming_tab_groups">Groups</string>
    <string name="theming_profile">Profile</string>
    <string name="theming_search">Search</string>
    <string name="theming_search_replies">Search replies</string>
    <string name="theming_reply">Reply</string>
    <string name="theming_reply_all">Reply All</string>
    <string name="theming_edit">Edit</string>
    <string name="theming_compose">Compose</string>
    <string name="theming_empty_screen_title">Screen under construction</string>
    <string name="theming_empty_screen_subtitle">This screen is still under construction.</string>
    <string name="theming_back_button">Back</string>
    <string name="theming_more_options_button">More options</string>
    <string name="theming_messages">Messages</string>
    <string name="theming_four_hours_ago">4 hrs ago</string>
    <string name="theming_twenty_mins_ago">20 mins ago</string>
    <string name="theming_description_favorite">Favorite</string>

    <string name="animating_home">Home</string>
    <string name="animating_work">Work</string>
    <string name="animating_weather">Weather</string>
    <string name="animating_temperature">18 ℃</string>
    <string name="animating_tasks">Tasks</string>
    <string name="animating_add_tasks">ADD TASKS</string>
    <string-array name="animating_tasks">
        <item>Buy milk</item>
        <item>Choose curtain</item>
        <item>Plant rosemary</item>
        <item>Finish the essay</item>
        <item>Receive new packages</item>
        <item>Take a photo</item>
    </string-array>
    <string name="animating_topics">Topics</string>
    <string-array name="animating_topics">
        <item>2 new packages arrived</item>
        <item>DIY project recommendation</item>
        <item>Festival next month</item>
        <item>New flower seeds available</item>
    </string-array>
    <string name="animating_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="animating_edit">EDIT</string>
    <string name="animating_edit_message">Edit feature is not supported</string>
    <string name="animating_refresh">Refresh</string>

    <string name="sideeffects_cd_menu">Menu</string>
    <string name="sideeffects_cd_back">Back</string>
    <string name="sideeffects_cd_loading">Loading</string>
    <string name="sideeffects_cd_drawer">Open drawer</string>
	
    <string name="navigation_total">Total</string>
    <string name="navigation_due">Due</string>
    <string name="navigation_account_redacted">• • • • • </string>
    <string name="navigation_accounts">Accounts</string>
    <string name="navigation_bills">Bills</string>
    <string name="navigation_sort">Sort</string>
    <string name="navigation_see_all">SEE ALL</string>

    <string name="jetnews_app_name">Jetnews</string>
    <string name="jetnews_load_error">Can\'t update latest news</string>
    <string name="jetnews_retry">Retry</string>
    <string name="jetnews_home_popular_section_title">Popular on Jetnews</string>
    <string name="jetnews_home_post_min_read">%1$s - %2$d min read</string>
    <string name="jetnews_cd_navigate_up">Navigate up</string>
    <string name="jetnews_cd_add_to_favorites">Add to favorites</string>
    <string name="jetnews_cd_share">Share</string>
    <string name="jetnews_cd_text_settings">Text settings</string>
    <string name="jetnews_cd_open_navigation_drawer">Open navigation drawer</string>
    <string name="jetnews_cd_show_fewer">Show fewer like this</string>
    <string name="jetnews_cd_bookmark">Bookmark</string>
    <string name="jetnews_unbookmark">unbookmark</string>
    <string name="jetnews_bookmark">bookmark</string>
    <string name="jetnews_fewer_stories">Show fewer stories like this?</string>
    <string name="jetnews_fewer_stories_content">This feature is not yet implemented</string>
    <string name="jetnews_agree">AGREE</string>
    <string name="jetnews_action_read_article">read article</string>
    <string name="jetnews_state_not_subscribed">not subscribed</string>
    <string name="jetnews_state_subscribed">subscribed</string>

    <string name="reply_app_name">Reply</string>
    <string name="reply_navigation_drawer">Navigation Drawer</string>
    <string name="reply_tab_inbox">Inbox</string>
    <string name="reply_tab_article">Articles</string>
    <string name="reply_tab_dm">Direct Messages</string>
    <string name="reply_tab_groups">Groups</string>
    <string name="reply_profile">Profile</string>
    <string name="reply_search">Search</string>
    <string name="reply_search_replies">search replies</string>
    <string name="reply_reply">Reply</string>
    <string name="reply_reply_all">Reply All</string>

    <string name="inventory_app_name">Inventory</string>
    <string name="inventory_attention">Attention</string>
    <string name="inventory_back_button">Back</string>
    <string name="inventory_delete">Delete</string>
    <string name="inventory_delete_question">Are you sure you want to delete?</string>
    <string name="inventory_no_item_description">Oops!\nNo items in the inventory.\nTap + to add.</string>
    <string name="inventory_edit_item_title">Edit Item</string>
    <string name="inventory_item">Item</string>
    <string name="inventory_item_detail_title">Item Details</string>
    <string name="inventory_item_entry_title">Add Item</string>
    <string name="inventory_item_name_req">Item Name*</string>
    <string name="inventory_item_price_req">Item Price*</string>
    <string name="inventory_no">No</string>
    <string name="inventory_price">Price</string>
    <string name="inventory_quantity_in_stock">Quantity in stock</string>
    <string name="inventory_in_stock">%d in stock</string>
    <string name="inventory_quantity_req">Quantity in Stock*</string>
    <string name="inventory_save_action">Save</string>
    <string name="inventory_sell">Sell</string>
    <string name="inventory_yes">Yes</string>
    <string name="inventory_required_fields">*required fields</string>

    <string name="bus_schedule_app_name">Bus Schedule</string>
    <string name="bus_schedule_full_schedule">Bus Schedule</string>
    <string name="bus_schedule_back">Back</string>
    <string name="bus_schedule_stop_name">Stop Name</string>
    <string name="bus_schedule_route_stop_name">Stop</string>
    <string name="bus_schedule_arrival_time">Arrival Time</string>

    <string name="datastore_app_name">Dessert Release</string>
    <string name="datastore_top_bar_name">Android Dessert Release</string>
    <string name="datastore_grid_layout_toggle">Grid layout</string>
    <string name="datastore_linear_layout_toggle">Linear layout</string>

    <string name="flight_search_app_name">Flight Search</string>
    <string name="motioncase_app_name">15 pazzle (Boss Puzzle)</string>

    <string name="auth"></string>
    <string name="auth_show_user_menu">Show user menu</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_show_password">Show password</string>
    <string name="auth_hide_password">Hide password</string>
    <string name="auth_escape">Escape</string>

    <string name="customlayout_app_name">JetLagged</string>
    <string name="customlayout_label_back">Back</string>
    <string name="customlayout_jetlagged_app_heading">JetLagged</string>
    <string name="customlayout_average_time_in_bed_heading">AVG. TIME IN BED</string>
    <string name="customlayout_average_sleep_time_heading">AVG. SLEEP TIME</string>
    <string name="customlayout_not_implemented">Not implemented yet</string>
    <string name="customlayout_placeholder_text_ave_time">8h2min</string>
    <string name="customlayout_placeholder_text_ave_time_2">7h15min</string>
    <string name="customlayout_sleep_type_awake">Awake</string>
    <string name="customlayout_sleep_type_rem">REM</string>
    <string name="customlayout_sleep_type_light">Light</string>
    <string name="customlayout_sleep_type_deep">Deep</string>
    <string name="customlayout_sleep_tab_day_heading">Day</string>
    <string name="customlayout_sleep_tab_week_heading">Week</string>
    <string name="customlayout_sleep_tab_month_heading">Month</string>
    <string name="customlayout_sleep_tab_six_months_heading">6M</string>
    <string name="customlayout_sleep_tab_one_year_heading">1Y</string>

    <string name="glance_buttons_title">Items collection</string>
    <string name="glance_radio_button1">Radio Button 1</string>
    <string name="glance_radio_button2">Radio Button 2</string>
    <string name="glance_check_box">Check box</string>
    <string name="glance_buttons_glance_widget_description">Glance Widget of CompoundButtons</string>
    <string name="glance_todo_list">Glance todo list</string>
    <string name="glance_grocery_list_milk">Milk</string>
    <string name="glance_grocery_list_eggs">Eggs</string>
    <string name="glance_grocery_list_tomatoes">Tomatoes</string>
    <string name="glance_grocery_list_bacon">Bacon</string>
    <string name="glance_grocery_list_butter">Butter</string>
    <string name="glance_grocery_list_cheese">Cheese</string>
    <string name="glance_grocery_list_potatoes">Potatoes</string>
    <string name="glance_grocery_list_broccoli">Broccoli</string>
    <string name="glance_grocery_list_salmon">Salmon</string>
    <string name="glance_grocery_list_yogurt">Yogurt</string>

    <string name="glance_timebutton_title">Current time</string>
    <string name="glance_todo_list_title">Simple ToDo list</string>
    <string name="title_network_articles_case">Network Articles case</string>
    <string name="title_datetime_case">Date time case</string>

</resources>